--- a/src/app/components/drive-management/manage-candidate/manage-candidate.component.html
+++ b/src/app/components/drive-management/manage-candidate/manage-candidate.component.html
@@ -42,17 +42,16 @@
                     (change)="importDataFromCSV($event);"
                     hidden="true"
                     />
-                    <span><button type="button" role="button" class="btn btn-danger" (click)="fileUploadSimple.click()"><span class="glyphicon glyphicon-cloud-upload"></span> Upload</button></span>
-                    <span> | </span>
-                    <span><button type="button" role="button" class="btn btn-danger" (click)="saveDataInCSV('sampleData', sampleData)"><span class="glyphicon glyphicon-download-alt"></span> Download
-                    </button></span>
-                    <span> | </span>
+                    <span class="span"><button type="button" role="button" class="btn btn-danger" (click)="fileUploadSimple.click()"><span class="glyphicon glyphicon-cloud-upload"></span> Upload</button> </span>
+                    
+                    <span class="span"><button type="button" role="button" class="btn btn-danger" (click)="saveDataInCSV('sampleData', sampleData)"><span class="glyphicon glyphicon-download-alt"></span> Download
+                    </button> </span>
+                    
                     <span><button type="button" role="button" class="btn btn-danger" (click)="bulkUpload()" >Store the data
                     </button></span>
                 </div>
                 
             </div>
-            <div>data from csv</div>
             <div *ngFor="let item of importedData">{{ item | json }}</div>
 
         </div>
@@ -79,7 +78,8 @@
                                     <label for="fname" >First Name:</label>
                                 </div>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" id="fname" name="candidate_first_name" placeholder="Enter First Name" ngModel><br>
+                                    <input class="form-control" type="text" id="fname" name="candidate_first_name" placeholder="Enter First Name" ngModel pattern="[a-zA-Z]+$" required #firstName="ngModel"><br>
+                                    <span class="validation-span" *ngIf="firstName.invalid && firstName.touched">Enter valid input (contains a-z or A-Z) </span> 
                                 </div>
                             </div>
                         </div>
@@ -90,7 +90,9 @@
                                     <label for="lname" >Last Name:</label>
                                 </div>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" id="lname" name="candidate_last_name" placeholder="Enter Last Name" ngModel><br>
+                                    <input class="form-control" type="text" id="lname" name="candidate_last_name" placeholder="Enter Last Name" ngModel pattern="[a-zA-Z]+$" required #lastName="ngModel"><br>
+                                    <span class="validation-span" *ngIf="lastName.invalid && lastName.touched">Enter valid input (contains a-z or A-Z) </span> 
+
                                 </div>
                             </div>
                         </div>
@@ -102,7 +104,8 @@
                                     <label for="email" ><b>Email:</b></label>
                                 </div>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="email" placeholder="Enter Email"  name="candidate_email" id="email" required ngModel><br>
+                                    <input class="form-control" type="email" placeholder="Enter Email"  name="candidate_email" id="email" email required ngModel #email="ngModel"><br>
+                                    <span class="validation-span" *ngIf="email.invalid && email.touched">Enter Valid Email</span> 
                                 </div>
                             </div>
                         </div>
@@ -114,7 +117,7 @@
                                     <label for="phone" >Phone Number:</label>
                                 </div>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="tel" id="fnum" placeholder="Enter Phone Number" name="candidate_contact" ngModel><br>
+                                    <input class="form-control" type="tel" id="fnum" placeholder="Enter Phone Number" name="candidate_contact" ngModel required><br>
                                 </div>
                             </div>
                         </div>
@@ -125,7 +128,7 @@
                                     <label for="graduationYear" >Graduation Year:</label>
                                 </div>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" id="graduationYear" name="graduation_year" placeholder="Enter Graduation Year" ngModel><br>
+                                    <input class="form-control" type="text" id="graduationYear" name="graduation_year" placeholder="Enter Graduation Year" ngModel required><br>
                                 </div>
                             </div>
                         </div>  
@@ -136,7 +139,7 @@
                                     <label for="Entity">Choose Entity:</label>
                                 </div>
                                 <div class="col-sm-9">
-                                    <select class="form-control entity-select custom-select my-1 mr-sm-2" id="entityName" name="entity" ngModel>
+                                    <select class="form-control entity-select custom-select my-1 mr-sm-2" id="entityName" name="entity" ngModel required>
                                         <option selected>Choose From Dropdown</option>
                                         <option placeholder="Select Entity" *ngFor="let entity of entityData">{{entity.entity_name}}</option>
                                     </select>
@@ -148,7 +151,7 @@
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
                                 Close
                             </button>
-                            <button type="submit" class="btn btn-success action-link-refresh"  (click)="saveCandidate()" data-bs-dismiss="modal">
+                            <button type="submit" class="btn btn-success action-link-refresh" [disabled]="candidateForm.invalid"  (click)="saveCandidate()" data-bs-dismiss="modal">
                                 Save changes
                             </button>
                         </div>
