--- a/src/app/components/entity-form/entity-form.component.html
+++ b/src/app/components/entity-form/entity-form.component.html
@@ -142,9 +142,7 @@
                       <label for="entityname">Entity Name:</label>
                     </div>
                     <div class="col-sm-9">
-                      <input class="form-control" type="text" id="entityname" name="entity_name" placeholder="Enter Entity Name" value="{{entityName}}"
-                      [disabled]="true"
-                      ngModel>
+                      <input class="input-disabled form-control" type="text" id="entityname" name="entity_name" placeholder="Enter Entity Name" [(ngModel)]="entityName">
                     </div>
                   </div>
   
@@ -166,16 +164,14 @@
                       <label for="entityplace">Entity Place:</label>
                     </div>
                     <div class="col-sm-9">
-                      <input class="form-control" type="text" id="entityplace" name="entity_place" placeholder="Enter Entity Place" value="{{entityPlace}}"
-                      [disabled]="true"
-                      ngModel>
+                      <input class="input-disabled form-control" type="text" id="entityplace" name="entity_place" placeholder="Enter Entity Place" [(ngModel)]="entityPlace">
                     </div>
                   </div>
   
                   <h4 for="EntityContact">Contact Person:</h4>
                   
                   <div class="form-group row border border-dark py-4">
-                    <div *ngFor="let obj of contactPersons; let i = index">
+                    <div *ngFor="let obj of edtContactPersons; let i = index">
                       <div class="col-sm-4 input-short d-inline-flex">
                           <input class="form-control" type="text" id="contactName" name="contactName" placeholder="Name" [(ngModel)]="obj.contactName">
                       </div>
@@ -203,7 +199,7 @@
                       <div class="col-sm-1 my-2 d-inline-flex">
                         <span
                           class="delete-icon glyphicon glyphicon-trash space"
-                          (click)="removeContact(i)"
+                          (click)="removeEditContact(i)"
                           *ngIf="checkIndex(i)">
                         </span>
                       </div>
@@ -211,7 +207,7 @@
                   </div>
   
                   <div class="add_remove">
-                    <span class="btn btn-danger " (click)="addContact()"><span class="glyphicon glyphicon-plus-sign"></span> Add contact </span>
+                    <span class="btn btn-danger " (click)="addEditContact()"><span class="glyphicon glyphicon-plus-sign"></span> Add contact </span>
                   </div>
   
                   <div class="modal-footer">
