--- a/src/app/components/panelist-form/panelist-form.component.html
+++ b/src/app/components/panelist-form/panelist-form.component.html
@@ -35,7 +35,7 @@
             </div>
     
             <div class="modal-body">
-              <form #panelistForm="ngForm" (ngSubmit)="postPanelistData(panelistForm)">
+              <form #panelistForm="ngForm" (ngSubmit)="postPanelistData(panelistForm.value)">
                   <div>
                     <div class="form-group row">
                       <div class="col-sm-3 col-form-label">
@@ -176,14 +176,14 @@
             </div>
     
             <div class="modal-body">
-                <form #panelistForm="ngForm" (ngSubmit)="editPanelist(panelistForm)">
+                <form #editPanelistForm="ngForm" (ngSubmit)="editPanelist(editPanelistForm.value)">
                   <div>
                     <div class="form-group row">
                       <div class="col-sm-3 col-form-label">
                         <label for="fname" >Name:</label>
                       </div>
                       <div class="col-sm-9">
-                        <input class="form-control" type="text" id="fname" name="name" placeholder="Enter  Name" value="{{PanelistName}}" [(ngModel)]="updatedPanelist.name" >
+                        <input class="form-control" type="text" id="fname" name="name" placeholder="Enter Name" ngModel>
                       </div>
                     </div>
                     
@@ -201,7 +201,7 @@
                         <label for="email" ><b>Email:</b></label>
                       </div>
                       <div class="col-sm-9">
-                        <input class="form-control" type="email" placeholder="Enter Email"  name="email" id="email" value="{{PanelistEmail}}" [(ngModel)]="this.updatedPanelist.email" [disabled]="true"><br>
+                        <input class="input-disabled form-control" type="email" placeholder="Enter Email"  name="email" id="email" [(ngModel)]="PanelistEmail"><br>
                       </div>
                     </div>
                 
@@ -210,7 +210,7 @@
                         <label for="phone" >Phone Number:</label>
                       </div>
                       <div class="col-sm-9">
-                        <input class="form-control" type="tel" id="fnum" placeholder="Enter Phone Number" value="{{PanelistContact}}" name="phone_number" [(ngModel)]="this.updatedPanelist.phone_number" [disabled]="true"><br>
+                        <input class="input-disabled form-control" type="tel" id="fnum" placeholder="Enter Phone Number" name="phone_number" [(ngModel)]="PanelistContact"><br>
                       </div>
                     </div>
   
@@ -219,11 +219,11 @@
                         <label for="role" >Choose Role: </label>
                       </div>
                       <div class="col-sm-9">
-                        <select class="form-control" id="role" name="role" [(ngModel)]="this.updatedPanelist['custom:role']">
+                        <select class="form-select form-select-lg" id="role" name="role" ngModel>
                           <option selected>Choose From dropdown</option>
-                          <option value="admin">{{settingsFile.admin}}</option>
-                          <option value="panelist">{{settingsFile.panelist}}</option>
-                          <option value="Viewer">{{settingsFile.viewer}}</option>
+                          <option>{{settingsFile.admin}}</option>
+                          <option>{{settingsFile.panelist}}</option>
+                          <option>{{settingsFile.viewer}}</option>
                           </select>
                       </div>
                       <!-- <div class="col-sm-2" *ngFor="let item of userRoles">
