--- a/src/app/components/drive-management/panel-form/show-panelist/show-panelist.component.html
+++ b/src/app/components/drive-management/panel-form/show-panelist/show-panelist.component.html
@@ -31,7 +31,7 @@
                       <table class="table table-bordered table-striped table-hover display" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                           <thead>
                           <tr>
-                              <th>Checkbox</th>
+                              <th>Select</th>
                               <th>Panelist Name</th>
                           </tr>
                           </thead>
