--- a/src/app/components/entity-form/entity-form.component.html
+++ b/src/app/components/entity-form/entity-form.component.html
@@ -66,6 +66,7 @@
                         <option selected>Select Entity Type</option>
                         <option>{{settingsFile.college}}</option>
                         <option>{{settingsFile.university}}</option>
+                        <option>{{settingsFile.agency}}</option>
                       </select>
                     </div>
                   </div>
