--- a/src/app/components/drive-management/manage-candidate/manage-candidate.component.html
+++ b/src/app/components/drive-management/manage-candidate/manage-candidate.component.html
@@ -10,7 +10,7 @@
         <label for="Drive">Switch Drive:</label>
         <select class="mx-2" id="role" name="drive" #drives ngModel (change)="getSpecificDrive(drives.value)">
             <!-- {{drives | json}} -->
-            <option disabled></option>
+            <!-- <option disabled></option> -->
             <option *ngFor="let obj of hiringDrives">{{obj.title}}</option>
         </select>
     </div>
@@ -44,15 +44,15 @@
                     />
                     <span class="span"><button type="button" role="button" class="btn btn-danger" (click)="fileUploadSimple.click()"><span class="glyphicon glyphicon-cloud-upload"></span> Upload</button> </span>
                     
-                    <span class="span"><button type="button" role="button" class="btn btn-danger" (click)="saveDataInCSV('sampleData', sampleData)"><span class="glyphicon glyphicon-download-alt"></span> Download
+                    <span class="span"><button type="button" role="button" class="btn btn-danger" (click)="saveDataInCSV('sampleData', sampleData)"><span class="glyphicon glyphicon-download-alt"></span> Template
                     </button> </span>
                     
-                    <span><button type="button" role="button" class="btn btn-danger" (click)="bulkUpload()" >Store the data
+                    <span><button type="button" role="button" class="btn btn-danger" (click)="bulkUpload()" >Save Data
                     </button></span>
                 </div>
                 
             </div>
-            <div *ngFor="let item of importedData">{{ item | json }}</div>
+            <!-- <div *ngFor="let item of importedData">{{ item | json }}</div> -->
 
         </div>
 
@@ -164,7 +164,7 @@
     </div>
 
     <div class="container-fluid my-5" *ngFor="let drive of specificDriveData">
-        {{drive | json}}
+        <!-- {{drive | json}} -->
         <div>
             <table class="table table-bordered table-striped table-hover display">
                 <thead>
