--- a/src/app/components/drive-management/panel-form/show-coordinators/show-coordinators.component.html
+++ b/src/app/components/drive-management/panel-form/show-coordinators/show-coordinators.component.html
@@ -30,7 +30,7 @@
                       <table class="table table-bordered table-striped table-hover display" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                           <thead>
                           <tr>
-                              <th>Checkbox</th>
+                              <th>Select</th>
                               <th>Coordinator Name</th>
                           </tr>
                           </thead>
