added some more validations in forms and edit panelist working

--- a/src/app/components/drive-management/hiring-drive-form/hiring-drive-form.component.html
+++ b/src/app/components/drive-management/hiring-drive-form/hiring-drive-form.component.html
@@ -60,9 +60,9 @@
               <span>
                 <select class="form-select form-select-lg" id="round" name="round" [(ngModel)]="obj.roundName">
                   <option disabled>Select Round</option>
-                  <option value="Pre-Placement">{{settingsFile.round_zero}}</option>
-                  <option value="Interview Round 1">{{settingsFile.round_one}}</option>
-                  <option value="Interview Round 2">{{settingsFile.round_two}}</option>
+                  <option >{{settingsFile.round_zero}}</option>
+                  <option >{{settingsFile.round_one}}</option>
+                  <option >{{settingsFile.round_two}}</option>
                 </select>
 
                 <!-- <select class="form-select form-select-lg" aria-label="Default select example" id="round" name="round" [(ngModel)]="obj.roundName">
