added the interview date logic

--- a/src/app/components/drive-management/panel-form/show-panelist/show-panelist.component.html
+++ b/src/app/components/drive-management/panel-form/show-panelist/show-panelist.component.html
@@ -24,7 +24,7 @@
   
           <div class="modal-body">
             <!-- {{specificCandidateData | json}} -->
-            {{panelistData | json}}
+            <!-- {{panelistData | json}} -->
               <form #formData="ngForm" (ngSubmit)="getSelectedData(formData.value)">
                   <li class="form-check" class="list">
                     <div>
